# pdftrick-native

./: .deploy.sh  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.MD  deploy.sh  mac-Makefile  page_render.h  pdftrick_native.c  pdftrick_render.c  pdftrick_render.h  script.sh  win-Makefile
.github/workflow/: github-actions-demo.yml
.github/workflows/: github-actions-mac.yml  github-actions-mac.yml.old  github-actions-windows.yml  github-actions.yml
cmake/: FindCheck.cmake
script/: version.bat  version.sh
src/: CMakeLists.txt  org_gmdev_pdftrick_nativeutil_NativeLibCall.c  org_gmdev_pdftrick_nativeutil_NativeLibCall.h  page_render.c  pdftrick_native.c  pdftrick_render.c  pdftrick_render.h
test/: CMakeLists.txt  check_page_render.c  check_pdftrick_render.c  check_render_thumbnail.c  common.c  common.h  main.c  render-test.c  render_test.c  test_headers.h  test_runner.c
test/src/: main.c
